--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,1 +1,9 @@
 <h1><%= @figure.name %></h1>
+
+<% @titles.all.each do |title| %>
+  <h2> <%= title.name %> </h2>
+<% end %>
+
+<% @landmarks.all.each do |landmark| %>
+  <h2> <%= landmark.name %> </h2>
+<% end %>
